@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Log4j2
 @Data
@@ -29,7 +28,7 @@ public class CroatiaService {
     public CroatiaModel getCroatiaPlatesByRegion(final String region) throws RegionNotFoundException {
         log.info("Start method getCroatiaPlatesByRegion");
         Optional<CroatiaEntity> croatiaRegion = croatiaRepo.findByRegion(region);
-        croatiaRegion.stream().filter(croatiaEntity -> croatiaEntity.getRegion().equals(region)).findFirst().orElseThrow(
+        croatiaRegion.stream().parallel().filter(croatiaEntity -> croatiaEntity.getRegion().equals(region)).findFirst().orElseThrow(
                 () -> new RegionNotFoundException(String.format(regionNotFound, region)));
 
         return CroatiaModel.toModelRegion(croatiaRegion);
@@ -39,10 +38,10 @@ public class CroatiaService {
         log.info("Start method getCroatiaPlatesByDescription");
         List<CroatiaEntity> croatiaEntities = croatiaRepo.findByDescription(description);
 
-        croatiaEntities.stream().findAny().map(croatiaEntity -> croatiaEntity.getDescription()).orElseThrow(
+        croatiaEntities.stream().parallel().findAny().map(croatiaEntity -> croatiaEntity.getDescription()).orElseThrow(
                 () -> new DescriptionNotFoundException(String.format(descriptionNotFound, description)));
 
-        return croatiaEntities.stream().map(CroatiaModel::toModelDescription).collect(Collectors.toList());
+        return croatiaEntities.stream().map(CroatiaModel::toModelDescription).toList();
     }
 
     public Iterable<CroatiaEntity> getAllRegions() {
